fixed upcoming event alignment

--- a/sbcs-website/src/components/EventCard.css
+++ b/sbcs-website/src/components/EventCard.css
@@ -18,7 +18,7 @@
 .home-indiv-event {
     display: flex;
     flex-direction:row;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     padding-top: 3rem;
     padding-bottom: 3rem;
